<?xml version="1.0"?>
<package format="3">
  <name>key_publisher</name>
  <version>0.0.0</version>
  <description>The key_publisher package</description>

  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
